--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,57 @@
-.columna1{
+h1{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+    margin-bottom: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+h2 {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+}
+
+h3{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+}
+ body{
+     background-image: url(principal.jpg);
+     background-size: 280vh;
+
+  
+button {
+    width:250px;
+    height: 45px;
+    text-decoration: none;
+    text-align: center;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #ee4613;
+    border-radius: 6px;
+    border: #ee4613;
+    margin: 14em;
+    
+
+
+
+}
+
+    //*text-decoration: none;
+    font-weight: 600;
+    font-size: 26px;
+    color: #ffffff;
+    background-color: #f50830;
+    border-radius: 6px;
+    
+  }
+  .boton_personalizado:hover{
+    color: #yellow;
+    background-color: #00000
+
+
     
 
 }
