css-menu-nav-func-js

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
 }
 
 .container-home{
-    background-image: url('background.jpg');
+    background-image: url('imagenes/background1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
@@ -176,17 +176,40 @@ img.appStore {
 
 /*Menu & Submenu*/
 
-.submenu {
+.submenu-name {
   display: none;
   background: #000;
 }
 
-.submenu-label:hover + .submenu {
-  display: block;
+.submenu-label-name {
+  padding: 0 50px;
 }
-.submenu:hover {
-  display: block;
+
+.submenu-label-name:hover + .submenu-name {
+  display: flex;
+  flex-wrap: wrap;
+    padding: 0;
 }
+
+
+.submenu-name:hover {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+
+.submenu-name{
+  width: 100%;
+}
+
+.submenu-name li {
+  width: 100%;
+}
+
+/*.submenu-name {
+
+}*/
 
 
 
@@ -319,8 +342,8 @@ img.appStore {
       .navbar ul li a {
         display: block;
         text-align: center;
-        min-width: 120px;
-        padding: 0 30px;
+        /*min-width: 120px;*/
+        /*padding: 0 30px;*/
       }
       .navbar ul li a:hover {
         background-color: rgba(255,255,255,0.15);
