evento-clic-funciones-main

--- a/src/style.css
+++ b/src/style.css
@@ -1,180 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700i&display=swap');
 
-/*
- h4 {
-    font-family: 'Roboto Mono', monospace; 
-    letter-spacing: 1.5px; 
-    color: ivory;
+.sectionOne {
+  margin-top: 120px;
 }
-
-.fa-facebook-f:before {
-    color: #fff;
-    font-size: 2.5em;
-}
-  
-.fa-instagram:before {
-    color: #fff;
-    font-size: 2.5em;
-    display: inline-flex 
-}
-
-.fa-whatsapp:before {
-    color: #fff;
-    font-size: 2.5em;
-}
-
-.container-home{
-    background-image: url('imagenes/background1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-}
-
-.sectionCeroHome {
-    display: flex;
-}
-
-.socialButton {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-.socialButton h4 {
-    width: 100%;
-}
-.section-hide {
-  display: none;
-}
-
-
-.row {
-    display: flex;
-}
-
-.col-1 {
-  margin-top: 0px; 
-  width: 50%; 
-  padding: 10% 0;
-}   
-
-.infoHome {
-    text-align: center;
-    margin-left: 10%;
-    display: flex;
-  
-  
-    
-}
-
-.relative {
-  position: relative;
-}
-
-.absolute {
-  position: absolute;
-}
-
-.infoHome p {
-  margin-top: 25px;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    letter-spacing: 2px;
-    line-height: 40px;
-    color: #ffffff;
-    font-size: 28px;
-}
-
-.buttonAtrapalosYa {
-
-    margin: 0 auto;
-    width:180px;
-    height: 40px;
-    text-decoration: none;
-    text-align: center;
-    padding: 5px;
-    font-weight: 550;
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #d63031;
-    border-radius: 10px;
-    border: 2px solid #d63031;
-    margin-left: 240px;
-    justify-content: end;
-    margin-top: 30px;
-}
-
-.buttonAtrapalosYa:hover {
-        opacity: 0.7;
-    }
-
-
-.buttonHome {
-    margin-left: 130px;
-    margin-top: 5px;    
-}
-
-.download {
-  margin-top: 50px;
- text-align: center;
- display: flex;
- width: 50%;
- flex-wrap: wrap;
-}
-
-.download h4 {
-    width: 100%;
-}
-
-.buttonDownload {
-    display: flex; 
-    margin-top: 10px;
-    width: 100%;
-}
-
-.shareFriends {
-    margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    width: 30%;
-    justify-content: space-around;
-    justify-content: flex-start;
-    margin-bottom: 40px;
-    margin-right: 140px;
-}
-
-.shareFriends h4 {
-    width: 100%;
-    text-align: center;
-}
-
-.socialButton {
-  margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-}
-
-.socialButton img {
-    width: 20px;
-    height: 20px;
-}
-
-img.playStore{
-    width: 160px;
-    height: 60px;
-    margin-right;
-    margin: 0 auto;
-}
-
-img.appStore {
-    width: 170px;
-    height: 45px;
-    margin: 0 auto;
-}
-*/
 
 .section-hide {
   display: none;
@@ -321,16 +149,12 @@ img.appStore {
       }
     
       /*boton prueba*/
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
+/*
       body {
         font-family: Helvetica, Arial, sans-serif;
         background-color: #fff;
         color: #333;
-      }
+      }*/
       .navbar {
         background-color: #000;
         color: #fff;
